<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/default_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/user_friend_request_mini_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        tools:srcCompat="@tools:sample/avatars"
        android:background="@color/md_theme_light_primaryContainer"
        android:contentDescription="@string/user_picture_cd" />
    <TextView
        android:id="@+id/user_request_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Username"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>

    <ImageButton
        android:id="@+id/user_request_reject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@color/invisible"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_baseline_cancel_24"
        android:contentDescription="@string/add_user_to_friends_btn_cd" />

    <ImageButton
        android:id="@+id/user_friend_request_accept_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:background="@color/invisible"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/message_user_cd" />

</LinearLayout>