<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".hobby.HobbyDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hobby_details_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_image_size"
        android:background="@color/md_theme_light_primaryInverse"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/hobby_details_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white_70"
        app:layout_constraintBottom_toBottomOf="@id/hobby_details_image">
        <TextView
            android:id="@+id/hobby_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            tools:text="@string/suggest_new_hobby"
            android:textSize="@dimen/hobby_details_title_size"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:id="@+id/favourite_hobby_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            android:src="@drawable/ic_baseline_favorite_border_36"
            android:background="@color/invisible"
            android:contentDescription="@string/favourite_button_cd" />

    </LinearLayout>

    <TextView
        android:id="@+id/hobby_users_section_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DataSectionLabel"
        android:padding="@dimen/default_padding"
        android:paddingTop="12dp"
        android:text="@string/hobby_users_list_label"
        android:textColor="@color/md_theme_light_onSurface"
        app:layout_constraintTop_toBottomOf="@id/hobby_details_headline"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hobby_users_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:background="@color/md_theme_light_primaryContainer"
        tools:listitem="@layout/item_user"
        app:layout_constraintTop_toBottomOf="@id/hobby_users_section_headline"/>

    <TextView
        android:id="@+id/hobby_users_not_visible_tv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        android:background="@color/md_theme_light_secondaryContainer"
        android:text="@string/signed_in_only"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/hobby_users_section_headline"/>

</androidx.constraintlayout.widget.ConstraintLayout>